
[TestDelete_ClusterExists_PrintsDeleteSuccess/K3d - 1]
🗑️ Delete cluster...
► deleting cluster
✔ cluster deleted
---

[TestDelete_ClusterExists_PrintsDeleteSuccess/Kind - 1]
🗑️ Delete cluster...
► deleting cluster
✔ cluster deleted
⚠ failed to cleanup local registry: check registry existence: create registry service: docker client is required
---

[TestDelete_ClusterExists_PrintsDeleteSuccess/Talos - 1]
🗑️ Delete cluster...
► deleting cluster
⚠ failed to disconnect local registry: create registry manager: apiClient cannot be nil
✔ cluster deleted
⚠ failed to cleanup local registry: check registry existence: create registry service: docker client is required
---

[TestDelete_ClusterNotFound_ReturnsError/K3d - 1]
🗑️ Delete cluster...
► deleting cluster
✗ cluster does not exist, nothing to delete
---

[TestDelete_ClusterNotFound_ReturnsError/Talos - 1]
🗑️ Delete cluster...
► deleting cluster
✗ cluster does not exist, nothing to delete
---

[TestDelete_ClusterNotFound_ReturnsError/Kind - 1]
🗑️ Delete cluster...
► deleting cluster
✗ cluster does not exist, nothing to delete
---

[TestDelete_ContextBasedDetection_ClusterNotFound - 1]
ℹ auto-detected Kind cluster 'nonexistent' from context

🗑️ Delete cluster...
► deleting cluster
✗ cluster does not exist, nothing to delete
---

[TestDelete_ContextBasedDetection_AutoDetectsDistribution/Kind_context_pattern - 1]
ℹ auto-detected Kind cluster 'my-cluster' from context

🗑️ Delete cluster...
► deleting cluster
✔ cluster deleted
⚠ failed to cleanup local registry: check registry existence: create registry service: docker client is required
---

[TestDelete_ContextBasedDetection_AutoDetectsDistribution/K3d_context_pattern - 1]
ℹ auto-detected K3d cluster 'dev-cluster' from context

🗑️ Delete cluster...
► deleting cluster
✔ cluster deleted
---

[TestDelete_ContextBasedDetection_AutoDetectsDistribution/Talos_context_pattern - 1]
ℹ auto-detected Talos cluster 'talos-homelab' from context

🗑️ Delete cluster...
► deleting cluster
⚠ failed to disconnect local registry: create registry manager: apiClient cannot be nil
✔ cluster deleted
⚠ failed to cleanup local registry: check registry existence: create registry service: docker client is required
---
